# compact-lsp

./: .editorconfig  .gitattributes  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/compact-analyzer/: Cargo.toml
crates/compact-analyzer/src/: diagnostics.rs  formatter.rs  lib.rs  parser.rs
crates/compact-analyzer/src/parser/: mod.rs  types.rs
crates/compact-lsp/: Cargo.toml
crates/compact-lsp/src/: main.rs  server.rs
crates/compact-lsp/src/server/: imports.rs  mod.rs  state.rs  utils.rs  validation.rs  workspace.rs
editors/nvim/: README.md
